Start fetching API data

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,6 +7,10 @@
     <title>Dog Breed App</title>
   </head>
   <body>
+    <h1>Dog Breeds App</h1>
+    <div id="breed">
+      
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
