--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dog Breed App</title>
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
   </head>
   <body>
-    <h1>Dog Breeds App</h1>
-    <div id="breed">
-      
+    <div class="app">
+      <div class="header">
+        <h1>Dog Breeds App</h1>
+        <div id="breed"></div>
+      </div>
+      <div class="slideshow">
+        <div
+          class="slide"
+          style="
+            background-image: url('https://images.dog.ceo/breeds/hound-afghan/n02088094_1003.jpg');
+          "
+        ></div>
+      </div>
     </div>
-    <script src="script.js"></script>
   </body>
 </html>
