--- a/index.html
+++ b/index.html
@@ -14,14 +14,7 @@
         <h1>Dog Breeds App</h1>
         <div id="breed"></div>
       </div>
-      <div class="slideshow">
-        <div
-          class="slide"
-          style="
-            background-image: url('https://images.dog.ceo/breeds/hound-afghan/n02088094_1003.jpg');
-          "
-        ></div>
-      </div>
+      <div class="slideshow" id="slideshow"></div>
     </div>
   </body>
 </html>
