Add favicon, update README.md

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Dog Breed App</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
+    <link rel="icon" type="image/png" href="/dog.png" />
   </head>
   <body>
     <div class="app">
       <div class="header">
-        <h1>Dog Breeds App</h1>
+        <h1>Dog Breed App</h1>
         <div id="breed"></div>
       </div>
       <div class="slideshow" id="slideshow"></div>
